--- a/views/getStarted.handlebars
+++ b/views/getStarted.handlebars
@@ -1,20 +1,49 @@
 <link rel="stylesheet" href="/getStarted/text.css">
 
-<div id=Started>
-  Empieza a 
-  <div id=flip>
-    <div><div>CONTROLAR</div></div>
-    <div><div>AHORRAR</div></div>
-    <div><div>TRIUNFAR!</div></div>
-  </div>
-   ¡AHORA!
-  <div>
-    <h1></h1>
-  </div>
-  <div id="bottonStart">
-    <a href="/start">
-      <button type="button" class="btn btn-block btn-success btn-lg">Comenzar</button>
-    </a>
+<div class="row">
+  <div id="Started">
+    Empieza a 
+    <div id="flip">
+      <div><div>CONTROLAR</div></div>
+      <div><div>AHORRAR</div></div>
+      <div><div>¡TRIUNFAR!</div></div>
+    </div>
+    ¡AHORA!
+    <div>
+      <h1></h1>
+    </div>
   </div>
 </div>
 
+
+
+<div class="row">
+
+  <div class="col-lg-4"></div>
+  <div class="col-lg-4">
+      <form action="/start" method="POST">
+          <div class="form-group">
+            <label for="accountName">Ingresa el nombre de tu primer cuenta</label>
+            <input type="text" autocomplete="off" required="required" class="form-control text-left" id="accountName" name="accountName" data-inputmask="'alias': 'numeric', 'groupSeparator': ',', 'autoGroup': true, 'digits': 2, 'digitsOptional': false, 'prefix': 'L ', 'placeholder': '0'">
+          </div>
+
+          <div class="form-group">
+            <label for="salary">Introduzca su salario</label>
+            <h5 class="text-aqua">Esto nos ayudara a brindarle consejos financieros.</h5>
+            <input type="number" autocomplete="off" required="required" class="form-control text-left" id="salary" name="salary" data-inputmask="'alias': 'numeric', 'groupSeparator': ',', 'autoGroup': true, 'digits': 2, 'digitsOptional': false, 'prefix': 'L ', 'placeholder': '0'">
+          </div>
+
+          <div class="form-group">
+            <label for="budget">Establezca un presupuesto mensual.</label>
+            <input type="number" autocomplete="off" required="required" class="form-control text-left" id="budget" name="budget" data-inputmask="'alias': 'numeric', 'groupSeparator': ',', 'autoGroup': true, 'digits': 2, 'digitsOptional': false, 'prefix': 'L ', 'placeholder': '0'">
+          </div>
+
+          <div id="bottonStart">    
+              <button type="submit" class="btn btn-block btn-success btn-lg">Comenzar</button>
+          </div>
+      </form>
+
+  </div>
+  <div class="col-lg-4"></div>
+
+</div>
