--- a/views/transactions.handlebars
+++ b/views/transactions.handlebars
@@ -183,6 +183,8 @@
           <div class="col-md-11">
             <div class="small-box bg-red">
               <div class="inner">
+                {{#cardTotal data}}
+                {{/cardTotal}}
                 <p>Tarjetas de credito</p>
               </div>
               <div class="icon">
