--- a/views/start.handlebars
+++ b/views/start.handlebars
@@ -22,7 +22,7 @@
             <div class="icon">
               <i class="ion ion-cash"></i>
             </div>
-            <a href="#" class="small-box-footer">Mas informacion <i class="fa fa-arrow-circle-right"></i></a>
+            <a href="/transactions" class="small-box-footer">Mas informacion <i class="fa fa-arrow-circle-right"></i></a>
           </div>
         </div>
         <!-- ./col -->
@@ -42,7 +42,7 @@
             <div class="icon">
               <i class="ion ion-arrow-graph-up-right"></i>
             </div>
-            <a href="#" class="small-box-footer">Mas informacion <i class="fa fa-arrow-circle-right"></i></a>
+            <a href="/transactions" class="small-box-footer">Mas informacion <i class="fa fa-arrow-circle-right"></i></a>
           </div>
         </div>
         <!-- ./col -->
@@ -63,7 +63,7 @@
             <div class="icon">
               <i class="ion ion-arrow-graph-down-right"></i>
             </div>
-            <a href="#" class="small-box-footer">Mas informacion <i class="fa fa-arrow-circle-right"></i></a>
+            <a href="/transactions" class="small-box-footer">Mas informacion <i class="fa fa-arrow-circle-right"></i></a>
           </div>
         </div>
         <!-- ./col -->
@@ -72,14 +72,15 @@
           <!-- small box -->
           <div class="small-box bg-red">
             <div class="inner">
-              <h3>65</h3>
+              {{#cardTotal data}}
+              {{/cardTotal}}
 
               <p>Tarjetas de credito</p>
             </div>
             <div class="icon">
               <i class="ion ion-card"></i>
             </div>
-            <a href="#" class="small-box-footer">Mas informacion <i class="fa fa-arrow-circle-right"></i></a>
+            <a href="/cards" class="small-box-footer">Mas informacion <i class="fa fa-arrow-circle-right"></i></a>
           </div>
         </div>
         {{else}}
@@ -153,7 +154,19 @@
         <!-- ./col -->
       </div>
 
-      
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="callout callout-info">
+                <h2><strong>Tu presupuesto para este mes</strong></h2>
+
+                <p>Verificalo constantemente para no exederte en los gastos.</p>
+
+                {{#budgetMaker data}}
+                {{/budgetMaker}}
+
+          </div>
+        </div>
+      </div>
       <!-- /.row -->
       <div class="row">
           <div class="col-md-6">
@@ -180,4 +193,30 @@
               <!-- /.box-body -->
             </div>
           </div>
+          <div class="col-md-6 ">
+            <div class="box box-success" >
+              <div class="box-header with-border">
+                <h3 class="box-title">gastos por categorias</h3>  
+              </div>
+              <div class="box-body">
+                <canvas id="categories" style="height: 227px; width: 455px;" height="227" width="455"></canvas>
+              </div>
+              <!-- /.box-body -->
+            </div>
+          </div>
+
+          <div class="col-md-6 ">
+            <div class="box box-success" >
+              <div class="box-header with-border">
+                <h3 class="box-title">Consejos</h3>  
+              </div>
+              <div class="box-body">
+                <canvas id="wellDone" style="height: 227px; width: 455px;" height="227" width="455"></canvas>
+                <h1></h1>
+              </div>
+              <!-- /.box-body -->
+              
+            </div>
+          </div>
+          
       </div>
