--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -27,12 +27,11 @@
 		<div class="container-login100">
 			<div class="wrap-login100">
 				<div class="login100-pic js-tilt" data-tilt>
-					<img src="/login/images/img-01.png" alt="IMG">
 					<div>
-						<button class="login100-form-btn" >
-							Sube una imagen
-						</button>
+						<h1 class="text-yellow text-center">Wall-E</h1>
 					</div>
+					<img src="/img/Cerditos.svg" alt="IMG">
+					
 					
 				</div>
 
