--- a/views/start.handlebars
+++ b/views/start.handlebars
@@ -211,6 +211,7 @@
                 <h3 class="box-title">Consejos</h3>  
               </div>
               <div class="box-body">
+                <h2>Recuerda, hoy es el mañana acerca del cual te preocupabas ayer. <em>-Dale Carnegie</em></h2>
                 <canvas id="wellDone" style="height: 227px; width: 455px;" height="227" width="455"></canvas>
                 <h1></h1>
               </div>
