--- a/views/getStarted.handlebars
+++ b/views/getStarted.handlebars
@@ -24,18 +24,18 @@
       <form action="/start" method="POST">
           <div class="form-group">
             <label for="accountName">Ingresa el nombre de tu primer cuenta</label>
-            <input type="text" autocomplete="off" required="required" class="form-control text-left" id="accountName" name="accountName" data-inputmask="'alias': 'numeric', 'groupSeparator': ',', 'autoGroup': true, 'digits': 2, 'digitsOptional': false, 'prefix': 'L ', 'placeholder': '0'">
+            <input type="text" autocomplete="off" required="required" class="form-control text-left" id="accountName" name="accountName">
           </div>
 
           <div class="form-group">
             <label for="salary">Introduzca su salario</label>
             <h5 class="text-aqua">Esto nos ayudara a brindarle consejos financieros.</h5>
-            <input type="number" autocomplete="off" required="required" class="form-control text-left" id="salary" name="salary" data-inputmask="'alias': 'numeric', 'groupSeparator': ',', 'autoGroup': true, 'digits': 2, 'digitsOptional': false, 'prefix': 'L ', 'placeholder': '0'">
+            <input type="number" autocomplete="off" required="required" class="form-control text-left" id="salary" name="salary" >
           </div>
 
           <div class="form-group">
             <label for="budget">Establezca un presupuesto mensual.</label>
-            <input type="number" autocomplete="off" required="required" class="form-control text-left" id="budget" name="budget" data-inputmask="'alias': 'numeric', 'groupSeparator': ',', 'autoGroup': true, 'digits': 2, 'digitsOptional': false, 'prefix': 'L ', 'placeholder': '0'">
+            <input type="number" autocomplete="off" required="required" class="form-control text-left" id="budget" name="budget" >
           </div>
 
           <div id="bottonStart">    
